# jax-buckets

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  PROTOCOL.md  README.md  RELEASE.md  USAGE.md  docker-compose.yml  docker-entrypoint.sh
crates/app/: CHANGELOG.md  Cargo.toml  build.rs
crates/app/src/: main.rs
crates/app/src/ops/bucket/: create.rs  list.rs  ls.rs  mod.rs  share.rs
crates/service/: CHANGELOG.md  Cargo.toml
crates/service/.sqlx/: query-03de6bfe5c1327d14479e41d2503d7e29983c2fe5392dc4694d46644f3001fc4.json  query-205720e854bde4c5f9e918c7f4b10ea3f73c1dfd01b6d5559f080719be010c91.json  query-4aaaab315ec6fe80f6b8301210978449dc9dcbb5dc77b0a9ee2a2111fd8424ef.json  query-e75cef469bb9ef2dddc6685e07b3921bcabd3d664084ccae009a28f5162a4565.json  query-ee6fa9bd8c52e7f437474be95cec3a91aa1f1c6fce371fc5716cf8a968ee3f26.json
crates/service/src/: jax_state.rs  lib.rs  peer_state.rs  state.rs  sync_coordinator.rs
crates/service/src/database/: mod.rs
crates/service/src/http_server/: config.rs  mod.rs
crates/service/src/http_server/api/v0/bucket/: create.rs  list.rs  mod.rs  share.rs
crates/service/src/http_server/html/: bucket_explorer.rs  buckets.rs  index.rs  peers_explorer.rs  pins_explorer.rs
crates/service/src/mount_ops/: add_data.rs  get_file_content.rs  list_buckets.rs  mod.rs  share_bucket.rs  types.rs
crates/service/src/process/: mod.rs
crates/service/src/sync_manager/: mod.rs
crates/service/src/testkit/: mod.rs  protocol.rs  registry.rs
crates/service/tests/: share_offline_then_sync.rs
rust/: .gitignore  Cargo.toml  Dockerfile  Makefile  PATTERN.md  release.toml
rust/_crates/: Dockerfile
rust/_crates/cli/: Cargo.toml  build.rs
rust/_crates/cli/src/: args.rs  change_log.rs  error.rs  main.rs  state.rs
rust/_crates/cli/src/ops/: add.rs  diff.rs  init.rs  key.rs  mod.rs  object.rs  pull.rs  push.rs  stat.rs  utils.rs
rust/_crates/common/: Cargo.toml
rust/_crates/common/src/: lib.rs
rust/_crates/common/src/linked-data/: ipld.rs  mod.rs  node.rs  object.rs  schema.rs
rust/_crates/common/src/types/: manifest.rs
rust/_crates/common/src/types/linked-data/: mod.rs  utils.rs
rust/_crates/http/: Cargo.toml  Makefile
rust/_crates/http/.sqlx/: query-1ffda33187fc8907e7ed99f09fb7aec6b5a8c113b38a285dac14e7ddc025772c.json  query-7bd935e4f3e0125d2b923ebd6c0fd32a8d2a7881967f12647884c2c0a4ed8f2e.json
rust/_crates/http/data/: .gitignore
rust/_crates/http/migrations/: 20240414015317_root_cid.up.sql
rust/_crates/http/src/: lib.rs  main.rs
rust/_crates/http/src/api/: mod.rs
rust/_crates/http/src/api/root/: mod.rs  pull_root.rs  push_root.rs
rust/_crates/http/src/app/: config.rs  state.rs
rust/_crates/http/src/client/api/: client.rs  error.rs
rust/_crates/http/src/client/api/api_requests/: mod.rs  pull_root.rs  (+1 more)
rust/_crates/http/src/content/: get_content.rs  mod.rs
rust/_crates/http/src/database/: mod.rs
rust/_crates/http/src/database/models/: mod.rs
rust/_crates/http/src/database/types/: dcid.rs
rust/_crates/http/src/health/: data_source.rs  mod.rs  readiness.rs
rust/_crates/http/src/server/: mod.rs
rust/_crates/iroh/: Cargo.toml
rust/_crates/mount/: Cargo.toml
rust/_crates/mount/src/: ipfs_rpc.rs  lib.rs  mount.rs
rust/_crates/tracker/: Cargo.toml
rust/_crates/tracker/src/: config.rs  lib.rs
rust/_crates/tracker/src/cli/: args.rs
rust/_crates/tracker/src/cli/ops/: init.rs  mod.rs
rust/crates/app/: CHANGELOG.md  Cargo.toml
rust/crates/app/src/: args.rs  main.rs  op.rs  state.rs
rust/crates/app/src/ops/: init.rs  mod.rs  service.rs  version.rs
rust/crates/app/src/ops/bucket/: add.rs  cat.rs  ls.rs  mod.rs  mount.rs
rust/crates/common/: Cargo.toml  build.rs
rust/crates/common/src/: lib.rs
rust/crates/common/src/bucket/: bucket.rs  manifest.rs  maybe_mime.rs  mod.rs  mount.rs  node.rs  principal.rs
rust/crates/common/src/crypto/: keys.rs  mod.rs  secret.rs  share.rs
rust/crates/common/src/linked_data/: link.rs  mod.rs
rust/crates/common/src/mount/: mod.rs  mount.rs  pins.rs
rust/crates/common/src/node/: blobs_store.rs  mod.rs
rust/crates/common/src/peer/: blobs_store.rs  mod.rs
rust/crates/common/src/peer/jax_protocol/: client.rs  handler.rs  messages.rs  mod.rs  state.rs
rust/crates/common/src/peer/sync/: manager.rs
rust/crates/service/: CHANGELOG.md  Cargo.toml
rust/crates/service/.sqlx/: query-0d3dfecfc93dc18dece271c389d86a05a26c6752793fc510dd490bd25af40181.json  query-4406eafce172c8e55be70de53113cc16615adb4795eda95fc0746d326ebec2b1.json  query-50a5645f4acdb2b14276b8f0c8937f6c077a07a9b90b510e33587caf63319010.json  query-5a9a68e78f68a67929e1c1f2aa8d8f4ea2bb4f1af1fcb5305525aedb0f0b453a.json  query-62160f6949083df09d18809db9294b89308f66ff3830120db247fdc3b0af6fc3.json  query-70d23e173c9715fcc063c7766f3167cec267f8f1e489e0c343b86698f79830df.json
rust/crates/service/examples/: basic_server.rs
rust/crates/service/src/: config.rs  jax_state.rs  lib.rs  state.rs
rust/crates/service/src/database/: mod.rs
rust/crates/service/src/database/models/: bucket.rs  mod.rs
rust/crates/service/src/database/types/: dcid.rs
rust/crates/service/src/http_server/: config.rs  mod.rs
rust/crates/service/src/http_server/api/: mod.rs
rust/crates/service/src/http_server/html/: blobs.rs  bucket_explorer.rs  buckets.rs  file_viewer.rs  index.rs  mod.rs  peers_explorer.rs
rust/crates/service/src/mount_ops/: add_data.rs  error.rs  get_bucket_info.rs  get_bucket_pins.rs  get_bucket_shares.rs  get_file_content.rs  list_buckets.rs  list_contents.rs  load_mount.rs  mod.rs  share_bucket.rs  types.rs
rust/crates/service/src/process/: mod.rs
rust/crates/service/src/sync_manager/: mod.rs
rust/crates/service/static/: app.js  style.css
rust/crates/service/templates/: base.html  bucket_explorer.html  buckets.html  file_viewer.html  index.html  peers_explorer.html
rust/data/node1/: db.sqlite-shm  db.sqlite-wal  key.pem
rust/data/node1/blobs/: blobs.db
rust/data/node2/: db.sqlite-shm  db.sqlite-wal  key.pem
rust/data/node2/blobs/: blobs.db
(+27 files in other folders)
