[workspace]
resolver = "2"
members = ["crates/service", "crates/app", "crates/common"]

[workspace.dependencies]
# Core async/error handling
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-recursion = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
bincode = "1.3"
bytes = "1.5"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = [
    "load-shed",
    "limit",
    "timeout",
    "util",
] }
tower-http = { version = "0.6", features = [
    "fs",
    "cors",
    "sensitive-headers",
    "trace",
    "limit",
    "util",
] }
hyper = "1.0"
http = "1.0"
axum-extra = { version = "0.10", features = ["typed-header"] }

# Networking/HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
url = { version = "2.5", features = ["serde"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "local-time",
    "time",
    "tracing",
] }
tracing-appender = "0.2"
tracing-futures = { version = "0.2", default-features = false, features = [
    "std-future",
] }

# CLI
clap = { version = "4.5", features = ["derive"] }
pico-args = "0.5"
dotenvy = "0.15"

# Crypto/hashing
blake3 = { version = "3" }
ed25519 = "2.2"
hex = "0.4"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.9"

# IPFS/P2P
iroh = { version = "^0.35", features = ["discovery-pkarr-dht"] }
iroh-blobs = { version = "^0.35", features = ["rpc"] }
cid = { version = "0.11", features = ["serde"] }
ipld-core = { version = "0.4", features = ["serde"] }
serde_ipld_dagcbor = "0.6"

# Time/UUID
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# Utility
thiserror = "1.0"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
directories = "5.0"
dirs = "5.0"
toml = "0.8"
pem = "3.0"


# Database (for crates that need it)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "time",
    "uuid",
    "macros",
] }

# Template engine
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
