[package]
name = "jax-bucket"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "End-to-end encrypted storage buckets with peer-to-peer synchronization"
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "jax"
path = "src/main.rs"

[dependencies]
common = { package = "jax-common", version = "^0.1.1", path = "../common" }
service = { package = "jax-service", version = "^0.1.2", path = "../service", features = ["clap"] }

clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
directories = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
uuid = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }

[build-dependencies]
chrono = { workspace = true }
