[package]
name = "leaky-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "leaky"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leaky-common = { path = "../mount" }
anyhow = "1.0.80"
async-recursion = "1.1.0"
bincode = "1.3.3"
blake3 = { version = "^1", features = ["serde"] }
bytes = "1.5.0"
chrono = { version = "0.4.35", features = ["serde"] }
cid = "0.11.1"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
fs-tree = "0.5.5"
futures-util = "0.3.30"
pico-args = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_ipld_dagcbor = "0.6.1"
serde_json = "1.0.114"
serde_with = "3.8.1"
thiserror = "1.0.57"
thumbs-up = { git = "https://github.com/amiller68/thumbs-up.git" }
time = { version = "0.3.34", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.10.0", features = ["full"] }
url = { version = "^2", features = ["serde"] }
async-trait = "0.1.81"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
fs_extra = "1.3"
tokio = { version = "1.10.0", features = ["full", "test-util"] }
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
], default-features = false }
