[package]
name = "common"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hash_convert"
path = "bin/hash_convert.rs"

[[bin]]
name = "example_sig"
path = "bin/example_sig.rs"

[dependencies]
jax-eigen-trust = { path = "../eigen-trust" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
console_error_panic_hook = "0.1"
clap = { workspace = true }
dotenvy = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
pico-args = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }

tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-futures = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
axum-extra = { workspace = true }
tokio-util = { workspace = true }

iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-base = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
bao-tree = { version = "0.13", features = ["tokio_fsm"], default-features = false }
rand_chacha = { workspace = true }
uuid = { workspace = true }
alloy = { workspace = true }
futures-util = { workspace = true }
alloy-chains = { workspace = true }
ed25519 = { workspace = true }
hex = { workspace = true }
