[package]
name = "leaky-common"
version = "0.2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
async-recursion = "1.1.0"
bincode = "1.3.3"
blake3 = { version = "^1", features = ["serde"] }
bytes = "1.5.0"
chrono = { version = "0.4.35", features = ["serde"] }
cid = "0.11.1"
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15.7"
fs-tree = "0.5.5"
futures-util = "0.3.30"
http = "^0.2"
ipfs-api-backend-hyper = { git = "https://github.com/amiller68/rust-ipfs-api", features = [
  "with-hyper-rustls",
] }
ipld-core = "0.4.1"
libipld = { version = "0.16.0", features = ["serde-codec"] }
pico-args = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_ipld_dagcbor = "0.6.1"
serde_json = "1.0.114"
serde_with = "3.8.1"
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.10.0", features = ["full"] }
thumbs-up = { git = "https://github.com/amiller68/thumbs-up.git" }
url = { version = "^2", features = ["serde"] }
reqwest = { version = "^0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
parking_lot = "0.12.3"
glob = "0.3.1"
