[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
service = { path = "../service", features = ["clap"] }

clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
