[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
service = { path = "../service", features = ["clap"] }

clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
directories = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
uuid = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }

[build-dependencies]
chrono = { workspace = true }
