[package]
name = "service"
version = "0.1.0"
edition = "2021"

[lib]
name = "service"
path = "src/lib.rs"

build = "build.rs"

[dependencies]
# Workspace crates
common = { path = "../common" }

# optional clap support for CLI usage
clap = { workspace = true, optional = true }

# web + service
axum = { workspace = true, features = ["macros"] }
axum-extra = { version = "^0.10", features = ["typed-header"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors", "trace"] }

# observability
tracing-appender = { version = "^0.2" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# async
tokio = { workspace = true }

# http
askama = { workspace = true }
askama_axum = { workspace = true }

# sql
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time", "macros", "uuid"] }
time = { workspace = true }

# core
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url.workspace = true
http.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
chrono = { workspace = true }

[features]
clap = ["dep:clap"]
